[package]
name = "rone"
version = "0.1.0"
authors = ["Kjell W. Kongsvik <kjell.kongsvik@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "async" }
jsonwebtoken = "7"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
lazy_static="1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_derive = "1"
futures="*"

[dev-dependencies]
mockito="0.23"
