[package]
name = "rone"
version = "0.1.0"
authors = ["Kjell W. Kongsvik <kjell.kongsvik@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "async" }
jsonwebtoken = "7"
serde = {version = "1", features = ["derive"] }
lazy_static="1"
prost = "0.6"
zmq = "0.9"

[build-dependencies]
prost-build = "0.6.1"
